fixed gaps and w/h corrections

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -17,3 +17,9 @@
         padding-top: 36px;
     }
 }
+
+@media screen and (max-width: 579px) {
+    .cards {
+        padding-top: 36px;
+    }
+}
